tests/trybuild/compile_fail/with_settings/bump/borrow_mut/guaranteed_allocated_decrease.stderr
error[E0080]: evaluation panicked: can't change guaranteed-allocated property using `Bump(Scope)::borrow_mut_with_settings`
 --> src/raw_bump.rs
  |
  | /             assert!(
  | |                 NewS::GUARANTEED_ALLOCATED == S::GUARANTEED_ALLOCATED,
  | |                 "can't change guaranteed-allocated property using `Bump(Scope)::borrow_mut_with_settings`"
  | |             );
  | |_____________^ evaluation of `bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, bump_scope::settings::BumpSettings>::ensure_satisfies_settings_for_borrow_mut::<bump_scope::settings::BumpSettings<1, true, false>>::{constant#0}` failed here

note: erroneous constant encountered
 --> src/raw_bump.rs
  |
  | /         const {
  | |             assert!(NewS::UP == S::UP, "can't change `UP` setting of `Bump(Scope)`");
  | |
  | |             assert!(
... |
  | |             );
  | |         }
  | |_________^

note: the above error was encountered while instantiating `fn bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, BumpSettings>::ensure_satisfies_settings_for_borrow_mut::<BumpSettings<1, true, false>>`
 --> src/bump.rs
  |
  |         self.raw.ensure_satisfies_settings_for_borrow_mut::<NewS>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
